@@ -11,6 +11,8 @@ base-installer (1.17) UNRELEASED; urgency=low
       kernel/ should be easily runnable by everyone now.
     - If run with TEST_VERBOSE=0, the test suite produces no output except
       on errors.
+    - kernel/tests/runtests and 'make test' in kernel/ exit non-zero on
+      errors.
   * Matt Kraai
     - Fix the spelling of "file system".
   * Steve Langasek
